src/view/browser/render/snapshots/nifi_lens__view__browser__render__connection__snapshots__connection_detail_endpoints_no_arrows.snap
---
source: src/view/browser/render/connection.rs
expression: "format!(\"{}\", terminal.backend())"
---
"┌ enrich → publish · connection ───────────────────────────────────────────────────────────────────┐"
"│┌ Endpoints ─────────────────────────────────────────────────────────────────────────────────────┐│"
"││Fill ███████████████████░░░░░░░░░░░░░░░░░  55% (loading…                                        ││"
"││DIR   KIND         NAME                                                                         ││"
"││Relations: success                                                                              ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Back-pressure ─────────────────────────────────────────────────────────────────────────────────┐│"
"││count    10000                                                                                  ││"
"││size     1 GB                                                                                   ││"
"││expire   0 sec                                                                                  ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
