src/view/browser/render/snapshots/nifi_lens__view__browser__render__connection__snapshots__connection_detail_sparkline_endpoint_missing.snap
---
source: src/view/browser/render/connection.rs
expression: out
---
"┌ enrich → publish · connection ───────────────────────────────────────────────────────────────────────────────────────┐"
"│┌ Endpoints ─────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││Fill ██████████████████████░░░░░░░░░░░░░░░░░░  55% (5500 fno history yet                                            ││"
"││DIR   KIND         NAME                                                                                             ││"
"││FROM  PROCESSOR    EnrichAttribute  →                                                                               ││"
"││TO    PROCESSOR    PublishKafka  →                                                                                  ││"
"││Relations: success                                                                                                  ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Back-pressure ─────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││count    10000                                                                                                      ││"
"││size     1 GB                                                                                                       ││"
"││expire   0 sec                                                                                                      ││"
"││load-bal DO_NOT_LOAD_BALANCE                                                                                        ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
