src/view/browser/render/snapshots/nifi_lens__view__browser__render__connection__snapshots__connection_detail_sparkline_narrow_suppressed.snap
---
source: src/view/browser/render/connection.rs
expression: out
---
"┌ enrich → publish · conn┐"
"│┌ Endpoints ───────────┐│"
"││Fill █████░░░░░  55% (││"
"││DIR   KIND         NAM││"
"││FROM  PROCESSOR    Enr││"
"││TO    PROCESSOR    Pub││"
"││Relations: success    ││"
"││                      ││"
"│└──────────────────────┘│"
"│┌ Back-pressure ───────┐│"
"││count    10000        ││"
"││size     1 GB         ││"
"││expire   0 sec        ││"
"││load-bal DO_NOT_LOAD_B││"
"││                      ││"
"│└──────────────────────┘│"
"│                        │"
"│                        │"
"│                        │"
"│                        │"
"│                        │"
"│                        │"
"│                        │"
"│                        │"
"│                        │"
"│                        │"
"│                        │"
"│                        │"
"│                        │"
"└────────────────────────┘"
